ensures arrow is stuck to the pop-in

--- a/app/client/lemverse.scss
+++ b/app/client/lemverse.scss
@@ -93,7 +93,7 @@ button:focus {
       top: 100%;
       left: 50%;
       width: 0;
-      transform: translateX(-50%);
+      transform: translate(-50%, -1px);
       border-top: 12px solid white;
       border-left: 12px solid transparent;
       border-right: 12px solid transparent;
